# cis-655-instruction-set

./: .gitignore  CMakeLists.txt  README.md
alu/: CMakeLists.txt  alu.cpp
alu/include/: alu.h
emulator/: CMakeLists.txt  alu.cpp  alu.h  main.cpp  output.cpp
emulator/src/: alu.cpp  alu.h  alu.test.cpp  main.cpp
instructions/: CMakeLists.txt
instructions/include/: instr.hpp
parser/: CMakeLists.txt  README.md  main.cpp  parser.cpp  parser.h
parser/include/: parser.h
programs/commented/: cse661_hw2_input_comments.txt  cse661_hw2_sort_comments.txt  cse661_hw2_weighted_avg_comments.txt
programs/input/: cse661_hw2_min_max_input.txt  cse661_hw2_sort_input.txt  cse661_hw2_weighted_avg_input.txt
runner/: CMakeLists.txt  runner.cpp
